# politifacts-qwen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  config.json  eval.yaml  test.yaml
data/: micro_test.json  small_train.json  test.json
hooks/: post_gen_project.sh
logs/: my_app_log.jsonl
notebooks/: finetune.ipynb
results/ar-qwen-mini/: metrics.json  testing_predictions.jsonl  training_metrics.json
results/ar-qwen-mini/checkpoint-23/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
scripts/: Dockerfile  finetune_improved.py  finetune_old.py  finetune_pipeline.py  finetune_v1.py  finetune_v2.py  paths.py  random_sample.py  release_gpu_memory.py
src/: baseline_eval.py  entrypoint.sh  finetune.py  mylogger.py  paths.py  settings.py  zero_shot_eval.py
