[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-qwen"
version = "0.1.0"
description = "aws-qwen"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "NguyenSome" }]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "black", "pytest", "pytest-cov", "pre-commit"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ["py312"]