[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-qwen"
version = "0.1.0"
description = "Fine-tuning and deploying Qwen models on AWS with MLflow tracking"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "NguyenSome" }]
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.2",
    "datasets>=4.1.1",
    "memory-profiler>=0.61.0",
    "mlflow>=3.4.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "psutil>=7.1.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "torch==2.6.0+cu124",
    "transformers>=4.56.2",
]

[project.optional-dependencies]
dev = ["ruff", "black", "pytest", "pytest-cov", "pre-commit", "ipykernel>=7.1.0"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
